--- a/FetchWeb/Web.config
+++ b/FetchWeb/Web.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-FetchWeb-20131102063153.mdf;Initial Catalog=aspnet-FetchWeb-20131102063153;Integrated Security=True"
+    <add name="DefaultConnection2" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-FetchWeb-20131102063153.mdf;Initial Catalog=aspnet-FetchWeb-20131102063153;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=tcp:uyenn2zupa.database.windows.net,1433;Database=FetchWeb;User ID=FetchDBUser@uyenn2zupa;Password=ShanikinSkywalker2013;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
