Added New Relic to website

--- a/FetchDomain/App.config
+++ b/FetchDomain/App.config
@@ -17,4 +17,7 @@
   <connectionStrings>
     <add name="FetchEntities" connectionString="metadata=res://*/Entities.csdl|res://*/Entities.ssdl|res://*/Entities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:uyenn2zupa.database.windows.net,1433;initial catalog=FetchWeb;integrated security=False;user id=FetchDBUser@uyenn2zupa;password=ShanikinSkywalker2013;connect timeout=30;encrypt=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="NewRelic.AppName" value="FetchDomain" />
+  </appSettings>
 </configuration>
