Adding test projects for unit testing

--- a/FetchDomain/FetchDomain.csproj
+++ b/FetchDomain/FetchDomain.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,8 +53,10 @@
   <ItemGroup>
     <Compile Include="Interfaces\IDog.cs" />
     <Compile Include="Interfaces\IOrganization.cs" />
+    <Compile Include="Interfaces\IUser.cs" />
     <Compile Include="Objects\Dog.cs" />
     <Compile Include="Objects\Organization.cs" />
+    <Compile Include="Objects\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
