--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\..\..\..\..\users\chris\documents\visual studio 2013\Projects\FetchWeb\FetchWeb.Tests\packages.config" />
   <repository path="..\FetchDomain\packages.config" />
   <repository path="..\FetchEntities\packages.config" />
+  <repository path="..\FetchWeb.Tests\packages.config" />
   <repository path="..\FetchWeb\packages.config" />
 </repositories>
