--- a/FetchWeb/FetchWeb.csproj
+++ b/FetchWeb/FetchWeb.csproj
@@ -210,7 +210,9 @@
     <Content Include="newrelic.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\getfetch-cw %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\getfetch-cw.pubxml" />
+    <None Include="Properties\PublishProfiles\getfetch.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
