--- a/FetchWeb/Web.Release.config
+++ b/FetchWeb/Web.Release.config
@@ -7,13 +7,13 @@
     In the example below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an atrribute "name" that has a value of "MyDB".
-
+  -->
     <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
+      <add name="DefaultConnection"
+        connectionString="Server=tcp:egunzc66fv.database.windows.net,1433;Database=FetchTest;User ID=svc_fetchdb_tst@egunzc66fv;Password=ws16mUMBtFG7;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
-  -->
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
