Save petfinder data to dev DB

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\..\..\..\..\users\chris\documents\visual studio 2013\Projects\FetchWeb\FetchWeb.Tests\packages.config" />
   <repository path="..\FetchDomain\packages.config" />
   <repository path="..\FetchEntities\packages.config" />
   <repository path="..\FetchWeb.Tests\packages.config" />
   <repository path="..\FetchWeb\packages.config" />
+  <repository path="..\TestDataLoader\packages.config" />
 </repositories>
