--- a/FetchDomain/FetchDomain.csproj
+++ b/FetchDomain/FetchDomain.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Objects\Organization.cs" />
     <Compile Include="Objects\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BaseService.cs" />
+    <Compile Include="Services\DogServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FetchEntities\FetchEntities.csproj">
@@ -75,6 +77,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
