--- a/FetchEntities/FetchEntities.csproj
+++ b/FetchEntities/FetchEntities.csproj
@@ -88,6 +88,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Entities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Organization.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
@@ -98,6 +99,7 @@
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DatabaseRepository.cs" />
     <Compile Include="User.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
@@ -135,6 +137,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
