--- a/FetchWeb/FetchWeb.csproj
+++ b/FetchWeb/FetchWeb.csproj
@@ -189,7 +189,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IDogsBrowseModel.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\api\DogFilterOptions.cs" />
+    <Compile Include="Models\api\DogsBrowseModel.cs" />
+    <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Objects\UnityDependencyResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
