--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\FetchDomain.Tests\packages.config" />
   <repository path="..\FetchDomain\packages.config" />
   <repository path="..\FetchEntities\packages.config" />
   <repository path="..\FetchWeb.Tests\packages.config" />
