--- a/FetchDomain/FetchDomain.csproj
+++ b/FetchDomain/FetchDomain.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseService.cs" />
     <Compile Include="Services\DogServices.cs" />
+    <Compile Include="Services\OrganizationServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FetchEntities\FetchEntities.csproj">
