--- a/FetchWeb/FetchWeb.csproj
+++ b/FetchWeb/FetchWeb.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Models\api\DogsBrowseModel.cs" />
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\OrganizationCreateModel.cs" />
     <Compile Include="Objects\UnityDependencyResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
