--- a/FetchWeb/FetchWeb.csproj
+++ b/FetchWeb/FetchWeb.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Models\api\DogFilterOptions.cs" />
     <Compile Include="Models\api\DogsBrowseModel.cs" />
     <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\DogCreateModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\OrganizationCreateModel.cs" />
     <Compile Include="Objects\UnityDependencyResolver.cs" />
@@ -260,10 +261,10 @@
     <Content Include="Views\Organization\Edit.cshtml" />
     <Content Include="Views\Organization\Delete.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\User.cshtml" />
+    <Content Include="Views\Dogs\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Dogs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
